# Stock-Back-testing-Engine

./: README.md  app.py  pyproject.toml
